# algolabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: implementation.md  manual.md  specification.md  tests.md
documentation/weekreports/: weekreport1.md  weekreport2.md  weekreport3.md  weekreport4.md  weekreport5.md  weekreport6.md
src/: euclidean.py  index.py  miller_rabin.py  sieve_of_eratosthenes.py  ui.py
src/tests/: euclidean_test.py  extended_euclidean_test.py  miller_rabin_test.py  rsa_test.py  sieve_of_eratosthenes_test.py
src/utilities/: euclidean.py  extended_euclidean.py  filehelper.py  messagehelper.py  miller_rabin.py  randomhelper.py  rsa.py  sieve_of_eratosthenes.py
