[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = "Course project for Algoritmit ja Tekoäly (HY)"
authors = ["Cherrybowl <81250492+Cherrybowll@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
pylint = "^3.3.3"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
